@@ -1,6 +1,8 @@
 
 Needed for 0.2:
 
+o check reading and writing (big) files from the R interface, possibly
+  rewrite
 o document bison requirements
 o repair simplify
 o attribute handling for operators
